Feat/#6 impletent routing (#3)
* feat: add simple router no redirect

* feat: add historyApiFallback to redirect on a devserver

* feat: add netlify plugin to redirect on netlify

* feat: add page 404

* fix: fixed the requested problems and change router.js to router.ts

* refactor: add the requested changes

* refactor: render-page.ts to index.ts

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,11 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <nav>
+    <a href="/" onclick="handleChangeRoute()">home</a>
+    <a href="/cart" onclick="handleChangeRoute()">cart</a>
+    <a href="/product" onclick="handleChangeRoute()">product</a>
+  </nav>
+  <div id="app"></div>
 </body>
 </html>
